# multimodal_RAG

./: .gitignore  .pre-commit-config.yaml  README.html  README.md  a_preprocessing.py  b_create_db.py  b_embeddings.py  c_lvlm.py  c_retrieve.py  embeddings.py  gradio_utils.py  multimodal_lancedb.py  preprocessing.py  pyproject.toml  requirements.txt  style.css  utils.py  utilsold.py
data/: download_data.py  download_sample_images.py
data/videos/: captions.vtt  metadata.json
notebooks/: .gitignore  LVLMs.ipynb  embeddings.ipynb  retrieval_vector_store.ipynb  video_processing.ipynb
