[project]
name = "multimodal-rag-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.20.1",
    "lancedb>=0.20.0",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "openai>=1.65.5",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.0.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "webvtt-py>=0.5.1",
    "youtube-transcript-api>=0.6.3",
    "yt-dlp>=2025.2.19",
]
